--- a/tp-frontend/loginstyles.css
+++ b/tp-frontend/loginstyles.css
@@ -112,3 +112,9 @@ button {
 button:hover {
     background-color: #fb8c00;
 }
+
+button:disabled {
+    background-color: #b0b0b0;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
