--- a/tp-frontend/stylesheets/loginstyles.css
+++ b/tp-frontend/stylesheets/loginstyles.css
@@ -1,15 +1,3 @@
-body {
-    background-color: #fff;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 h1 {
     color: #333;
 }
@@ -17,7 +5,7 @@ h1 {
 .login-view {
     width: 100vw;
     height: 100vh;
-    background-image: url('thirdplacebg.png');
+    background-image: url('../thirdplacebg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -58,7 +46,7 @@ h1 {
     flex-direction: column;
     height: 40vh;
     width: 45vw;
-    background-color: #f2b566;
+    background-color: var(--thirdplace-bg-color);
     position: relative;
     left: 30%;
     border-radius: 20% 20% 30% 5px;
