--- a/tp-frontend/stylesheets/roomstyles.css
+++ b/tp-frontend/stylesheets/roomstyles.css
@@ -1,8 +1,7 @@
 .main-container {
     height: 100vh;
-    width: 100vw;
+    width: 98vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: lightgray;
     justify-content: center;
     display: flex;
     gap: 10px;
@@ -24,11 +23,11 @@
     margin-top: 10px;
     font-size: 1.5em;
     border-bottom: black solid 2px;
+    height: fit-content;
 }
 
 .people-here {
     flex: 1;
-    display: flex;
     flex-direction: column;
 }
 
@@ -54,7 +53,6 @@
 
 .chat-panel {
     flex: 2;
-    display: flex;
     flex-direction: column;
 }
 
