--- a/tp-frontend/stylesheets/thirdplace.css
+++ b/tp-frontend/stylesheets/thirdplace.css
@@ -3,7 +3,6 @@
 }
 
 body {
-    background-color: #fff;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -12,4 +11,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    background-color: lightgray;
 }
