--- a/tp-frontend/stylesheets/loginstyles.css
+++ b/tp-frontend/stylesheets/loginstyles.css
@@ -1,7 +1,3 @@
-h1 {
-    color: #333;
-}
-
 .login-view {
     width: 100vw;
     height: 100vh;
@@ -9,6 +5,9 @@ h1 {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo-body {
@@ -24,6 +23,7 @@ h1 {
     text-shadow: 2px 2px rgba(0, 0, 0, 0.31), 0px 0px 20px rgba(255, 174, 96, 0.8);
 }
 
+/* Shadowing for the logo */
 .logo-body::before {
     content: '';
     position: absolute;
@@ -44,68 +44,17 @@ h1 {
 .account-pane {
     display: flex;
     flex-direction: column;
-    height: 40vh;
-    width: 45vw;
+    height: fit-content;
+    width: fit-content;
     background-color: var(--thirdplace-bg-color);
-    position: relative;
-    left: 30%;
     border-radius: 20% 20% 30% 5px;
     border: 5px double #c16400;
     align-items: center;
+    padding: 25px;
 }
 
 .fields-container {
     display: flex;
     width: 90%;
-}
-
-.separator {
-    width: 2%;
-    background-color: #ad5a0d;
-    height: 90%;
-    border-radius: 4px 4px 4px 4px;
-}
-
-.create-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    width: 50%;
-}
-
-.login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-}
-
-input {
-    margin: 10px 0;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 80%;
-}
-
-button {
-    background-color: #ff9800;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-button:hover {
-    background-color: #fb8c00;
-}
-
-button:disabled {
-    background-color: #b0b0b0;
-    cursor: not-allowed;
-    opacity: 0.6;
 }
